<resources>
    <string name="app_name">Touch</string>

    <!-- Strings related to login -->
    <string name="user_phone">手机</string>
    <string name="name_or_phone">用户名/手机</string>
    <string name="user_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="login_ing">正在登录</string>
    <string name="user_phone_empty">手机不能为空</string>
    <string name="name_or_phone_empty">用户名/手机不能为空</string>
    <string name="name_or_phone_wrong">用户名/手机错误</string>
    <string name="wrong_password">密码错误</string>
    <string name="login_fail">用户名/手机或密码错误</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forgot_password">忘记密码?</string>

    <!--<integer name="password_max_len">16</integer>-->

    <!-- Strings related to register -->
    <string name="user_password_again">再次输入密码</string>
    <string name="user_name">用户名</string>
    <string name="user_name_hint">用户名,不得以数字开头,至少为4位，最多为16位</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="wrong_verification_code">验证码错误</string>
    <string name="phone_empty">手机不能为空</string>
    <string name="phone_wrong">手机格式错误!</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="user_name_empty">昵称不能为空</string>
    <string name="hint_register_password">密码,至少为六位</string>
    <string name="pwd_len_wrong">密码不得小于6位或大于16位</string>
    <string name="password_not_equal">两次密码不相同</string>
    <string name="registering">正在注册</string>

    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="confirm">确定</string>

    <!--Error strings-->
    <string name="network_not_available">当前网络不可用</string>
    <string name="network_error">网络出错</string>
    <string name="unknown_error">发生未知错误</string>
    <string name="server_error">服务器错误</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="msg_send">发送</string>

    <string name="add_friend">添加好友</string>
    <string name="user_not_exist">不存在该用户(%1$s)</string>
    <string name="friend_apply">该用户申请添加您为好友</string>
    <string name="agree">同意</string>
    <string name="can_not_add_yourself">无法添加自己为好友</string>
    <string name="add_friend_over_time">好友(%1$s)申请失败</string>
    <string name="friend_already_add">你已添加该用户(%1$s)为好友</string>

    <string name="delete">删除</string>
    <string name="changePassword">修改密码</string>
    <string name="log_out">退出登录</string>
    <string name="quit">退出App</string>
    <string name="update_head_success">上传头像成功</string>


    <string name="reset_password_success">密码已重置</string>
    <string name="change_password_success">密码已修改</string>
    <string name="permission_denied">"没有权限执行该操作"</string>
    <string name="notification_msg_name">消息通知</string>
    <string name="friend_agree">该用户同意了你的申请</string>
    <string name="other_login_tip">你的帐号已在别处登录!</string>

    <string name="change_user_name">修改用户名</string>
    <string name="change_name_success">修改用户名功</string>
</resources>
